[project]
name = "secrets-cache"
version = "0.1.0"
description = "Cache secrets locally from AWS Secrets Manager and other secret stores."
readme = "README.md"
authors = [
  {name = "Ritvik Nag", email = "me@ritviknag.com"}
]
maintainers = [
  {name = "Ritvik Nag", email = "me@ritviknag.com"}
]
classifiers = [
    # TODO
    # Ref: https://pypi.org/classifiers/
    # 'Development Status :: 5 - Production/Stable',
    # 'Development Status :: 4 - Beta',
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/rnag/py-secrets-cache/issues"
changelog = "https://github.com/rnag/py-secrets-cache/blob/master/changelog.md"
homepage = "https://github.com/rnag/py-secrets-cache"

[project.scripts]
secrets_cache = "secrets_cache.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
